array.island.Island.scala.error
Compilation error:
Island:7: error: type mismatch;
 found   : Int
 required: String
      liste += num(i)
                  ^